+ added method illustrations + sharpened the depigmentation-first argument

--- a/yet_biomim.bib
+++ b/yet_biomim.bib
@@ -801,9 +801,9 @@
    year = {2016}
 }
 
-@mastersthesis{Hölter2025,
+@mastersthesis{Hoelter2025,
 month = {June},
-author = {Hölter, Janis},
+author = {Janis Hölter  and Martin Schmettow},
 year= {2025},
 school= {University of Twente},
 address= {Enschede},
@@ -813,9 +813,9 @@ abstract= {This study investigates whether Your Eye Tracker (YET), a system that
 url= { https://purl.utwente.nl/essays/107106},
 }
 
-@mastersthesis{Großerichter2025,
+@mastersthesis{Grosserichter2025,
 month = {June},
-author = {Großerichter, J.},
+author = {Julian Großerichter and Martin Schmettow},
 year= {2025},
 school= {University of Twente},
 address= {Enschede},
@@ -824,6 +824,80 @@ title= {Human Gaze Estimation : Comparing Accuracy in Naturalistic and Quad Brig
 abstract= {This paper investigates gaze estimation as a cognitive process and proposes that human gaze estimation can be modelled with an average brightness mechanism, split into four sectors or in other words, a quad brightness mechanism. The aim of this paper was to confirm whether humans are indeed able to estimate gaze in a quad brightness condition and, secondly, to test their accuracy in such a condition. For this research, face images were created and manipulated to show four quadrants with average brightness. These images were run through the times 70ms, 140ms, 400ms, 600ms and 1000ms in both original and manipulated form and participants estimated the gaze orientation of each conditions faces. It was found that participants were able to estimate the gaze orientation of quad brightness images. Their accuracy was, however, somewhat worse with a deviation of 10°. In a larger context and based on the findings, it is likely that the quad brightness process models, either a section of a larger process, of gaze estimations or is part of multiple and separate processes for gaze estimations. Further research could investigate how these processes are linked, as well as the influence of head directions.},
 url= { https://purl.utwente.nl/essays/106716},
 }
+
+@article{scikit-learn,
+  title={Scikit-learn: Machine Learning in {P}ython},
+  author={Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V.
+          and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P.
+          and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and
+          Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
+  journal={Journal of Machine Learning Research},
+  volume={12},
+  pages={2825--2830},
+  year={2011}
+}
+
+@article{opencv-library,
+    author = {Bradski, G.},
+    citeulike-article-id = {2236121},
+    journal = {Dr. Dobb's Journal of Software Tools},
+    keywords = {bibtex-import},
+    posted-at = {2008-01-15 19:21:54},
+    priority = {4},
+    title = {{The OpenCV Library}},
+    year = {2000}
+}
+
+@Manual{Rlang,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2025},
+    url = {https://www.R-project.org/},
+  }
+  
+@Article{brms,
+    title = {Advanced {Bayesian} Multilevel Modeling with the {R} Package {brms}},
+    author = {Paul-Christian Bürkner},
+    journal = {The R Journal},
+    year = {2018},
+    volume = {10},
+    number = {1},
+    pages = {395--411},
+    doi = {10.32614/RJ-2018-017},
+    encoding = {UTF-8},
+  }
+  
+  @article{Gronskov2007,
+   abstract = {Oculocutaneous albinism (OCA) is a group of inherited disorders of melanin biosynthesis characterized by a generalized reduction in pigmentation of hair, skin and eyes. The prevalence of all forms of albinism varies considerably worldwide and has been estimated at approximately I/ 17,000, suggesting that about I in 70 people carry a gene for OCA. The clinical spectrum of OCA ranges, with OCA1A being the most severe type with a complete lack of melanin production throughout life, while the milder forms OCA1B, OCA2, OCA3 and OCA4 show some pigment accumulation over time. Clinical manifestations include various degrees of congenital nystagmus, iris hypopigmentation and translucency, reduced pigmentation of the retinal pigment epithelium, foveal hypoplasia, reduced visual acuity usually (20/60 to 20/400) and refractive errors, color vision impairment and prominent photophobia. Misrouting of the optic nerves is a characteristic finding, resulting in strabismus and reduced stereoscopic vision. The degree of skin and hair hypopigmentation varies with the type of OCA. The incidence of skin cancer may be increased. All four types of OCA are inherited as autosomal recessive disorders. At least four genes are responsible for the different types of the disease (TYR, OCA2, TYRPI/ and MATP). Diagnosis is based on clinical findings of hypopigmentation of the skin and hair, in addition to the characteristic ocular symptoms. Due to the clinical overlap between the OCA forms, molecular diagnosis is necessary to establish the gene defect and OCA subtype. Molecular genetic testing of TYR and OCA2 is available on a clinical basis, while, at present, analysis of TYRP/ and MATP is on research basis only. Differential diagnosis includes ocular albinism, Hermansky-Pudlak syndrome, Chediak-Higashi syndrome, Griscelli syndrome, and Waardenburg syndrome type II. Carrier detection and prenatal diagnosis are possible when the disease causing mutations have been identified in the family. Glasses (possibly bifocals) and dark glasses or photocromic lenses may offer sufficient help for reduced visual activity and photophobia. Correction of strabismus and nystagmus is necessary and sunscreens are recommended. Regular skin checks for early detection of skin cancer should be offered. Persons with OCA have normal lifespan, development, intelligence and fertility.},
+   author = {Karen Grønskov and Jakob Ek and Karen Brondum-Nielsen},
+   doi = {10.1186/1750-1172-2-43},
+   issn = {17501172},
+   issue = {1},
+   journal = {Orphanet Journal of Rare Diseases},
+   pmid = {17980020},
+   title = {Oculocutaneous albinism},
+   volume = {2},
+   year = {2007}
+}
+
+@misc{Bakker2022,
+   abstract = {Albinism is a pigment disorder affecting eye, skin and/or hair. Patients usually have decreased melanin in affected tissues and suffer from severe visual abnormalities, including foveal hypoplasia and chiasmal misrouting. Combining our data with those of the literature, we propose a single functional genetic retinal signalling pathway that includes all 22 currently known human albinism disease genes. We hypothesise that defects affecting the genesis or function of different intra-cellular organelles, including melanosomes, cause syndromic forms of albinism (Hermansky-Pudlak (HPS) and Chediak-Higashi syndrome (CHS)). We put forward that specific melanosome impairments cause different forms of oculocutaneous albinism (OCA1-8). Further, we incorporate GPR143 that has been implicated in ocular albinism (OA1), characterised by a phenotype limited to the eye. Finally, we include the SLC38A8-associated disorder FHONDA that causes an even more restricted “albinism-related” ocular phenotype with foveal hypoplasia and chiasmal misrouting but without pigmentation defects. We propose the following retinal pigmentation pathway, with increasingly specific genetic and cellular defects causing an increasingly specific ocular phenotype: (HPS1-11/CHS: syndromic forms of albinism)-(OCA1-8: OCA)-(GPR143: OA1)-(SLC38A8: FHONDA). Beyond disease genes involvement, we also evaluate a range of (candidate) regulatory and signalling mechanisms affecting the activity of the pathway in retinal development, retinal pigmentation and albinism. We further suggest that the proposed pigmentation pathway is also involved in other retinal disorders, such as age-related macular degeneration. The hypotheses put forward in this report provide a framework for further systematic studies in albinism and melanin pigmentation disorders.},
+   author = {Reinier Bakker and Ellie L. Wagstaff and Charlotte C. Kruijt and Eszter Emri and Clara D.M. van Karnebeek and Michael B. Hoffmann and Brian P. Brooks and Camiel J.F. Boon and Lluis Montoliu and Maria M. van Genderen and Arthur A. Bergen},
+   doi = {10.1016/j.preteyeres.2022.101091},
+   issn = {18731635},
+   journal = {Progress in Retinal and Eye Research},
+   keywords = {Albinism,GPM6A,GPR143,Pigmentation,Retinal pigment epithelium (RPE)},
+   month = {11},
+   pmid = {35729001},
+   publisher = {Elsevier Ltd},
+   title = {The retinal pigmentation pathway in human albinism: Not so black and white},
+   volume = {91},
+   year = {2022}
+}
+
+
 
 
 @Comment{jabref-meta: databaseType:bibtex;}
