+ worked on Discussion

--- a/YET_CEHR.qmd
+++ b/YET_CEHR.qmd
@@ -665,15 +665,16 @@ range_quadbright <-
 
 ### Evolution of the effective sender
 
-The Cooperative Eye Theory implies that the eyeball is a very effective sender of glance direction signals, to allow for the most simple receiver mechanisms, as these are more likely to evolve. By construction of the most simple eye tracking device that can come to mind, we tried to establish a limit on how effective the sender is.
+The Cooperative Eye Theory implies that the eyeball is a very effective sender of glance direction signals, as simple receiver mechanisms are more likely to evolve. By construction of the most simple eye tracking device that can come to mind, we tried to establish a new limit on how effective the sender is.
 
-Overall, the Quadbright device showed very similar characteristics as human observers. Overall accuracy is in the same range as observed by @Gale2000, and the effect of eccentricity is also similar. In comparison with any other method of eye tracking the Quadbright device is extremely simple in hardware and software. In fact, hardware requireḿents can be further reduced to using a single 2x2 array of brightness sensors.
+Overall, the Quadbright device showed very similar characteristics as human observers. Accuracy is in the same range as observed by @Gale2000, and the effect of eccentricity is also similar. In comparison with any other method of eye tracking the Quadbright device is extremely simple, with a 2x2 array of brightness sensors as input requirements.
 
-Quadbright is extremely efficient in memory consumption, as it works with four brightness levels, which makes a total of 4 byte in the input buffer. Computationally, Quadbright is extremely efficient, as it uses a linear model with only 12 parameters to calculate eye directions. By the method of minimizing the sum of squares, all calculations in the process have closed solutions, requiring no costly numerical approximations, recursions, or iterative procedures.
+Quadbright is extremely efficient in memory consumption, as it works with four brightness levels, which makes a total of 4 byte in the input buffer. Computationally, Quadbright is extremely efficient, as it uses a linear model with only 12 parameters to calculate eye directions. By the method of minimizing the sum of squares, all calculations in the process have closed solutions, requiring no costly numerical approximations, recursions, or iterative procedures. From a biological perspective, every organism that can sense horizontal and vertical brightness changes, can evolve this function, or acquire it by learning.
 
-A limitation of the first study is that the YET Zero prototype fixes the camera close to eye, which does not match the conditions of a human observer. However, extreme data reduction of Quadbright input suggests that the algorithm will work for distant images as well. While the Quadbright device is not robust to adverse lighting conditions, this may not limit the conclusions of the study, because humans light adjustment capabilities of the human visual system (and that of many mammalian clades) are superb. A straight-forward technical approximation could be the addition of a few simple brightness sensors, and add these signals as control variables to the linear model. Finally, face detection and object tracking are required to find the eye region in a face. However, these are well-established techniques in computer vision, and the human visual system is extremely good at these tasks.
+We may not forget here, that the spherical form of eye balls has evolved not for computational reasons, but for the physical requirements of creating a moving, variable-focus optical lens from a sack of pressurized liquid. The second salient cue of eyeballs is the dark iris, which adjusts the opening of the lens under varying light levels. Pigmentation in the iris seems to reduce stray light effects, where internal reflections reduce contrast levels [@Kruijt2011].
 
-The simplicity of the Quadbright device is proof that the human eyeball is an extremely effective sender of glance direction signals, to the extent that it would be hard to believe that nature has never found a similar solution.
+
+
 
 <!--Face detection and tracking, compared to eye tracking, is computationally more complex by a few magnitudes as a technical solution requires advanced machine vision algorithms, such as Haar Cascades and XY object tracking. While computational complexity us universal, face detection on the human side probably had tens of millions of years to evolve, with object tracking being even much older.-->
 
@@ -697,19 +698,25 @@ The simplicity of the Quadbright device is proof that the human eyeball is an ex
 
 <!-- Maybe there lives, or once lived, a puma which could predict the direction of flight from the brightness distribution monkey eyes. -->
 
-Is the Quadbright algorithm equivalent with human glance reading? Is input organized as an image of four areas and the visual system performs a series of simple linear equations? If Quadbright is a good model of human glance perception, then all humans should be able to read glance directions from brightness differences between four grey areas.
+The simplicity of the Quadbright device supports the idea of sclera camouflage as a default condition among apes, despite the metabolic effort. It is hardly conceivable that apex predators, and in particular big cats, would not evolve the ability to read the eyes of their prey. 
+This ability is not necessarily eye direction reading as observed in humans. Another scenario is that first evolved the ability to detect faces. Animals equipped with face detection and sufficiently large brains are likely to *learn by experience* that brightness changes in the eye region often precedes an escape.
 
-Our second study assessed the impact of Quadbright degradation on human glance reading. It showed that for most participants performance dropped significantly and for some even catastrophically. Quadbright is definitely not the mechanism that drives modern human glance reading.
+Is the Quadbright algorithm equivalent with human glance reading? Is input organized as an image of four areas and the visual system performs a series of simple linear equations? If Quadbright is a good model of human glance perception, then all humans should be able to read glance directions from brightness four grey areas. 
+Our second study showed that Quadbright degradation led to a strong overall decline in reading performance. Quadbright is definitely not the mechanism that drives modern human eye direction reading.
 
-This puts alternative theories of human glance reading into perspective. @Kano2022 used computer vision methods to show that the human eye has excellent sender characteristics. This work can also serve as a starting point for a more complex model of human glance reading.
+While most participants were less accurate with degraded images, the majority of the participants was still much beyond guessing. Crucially, the Quadbright degradation makes it almost impossible for any mechanism that goes beyond brightness gradients, such as edge detection. We can conclude that a minimum of two processing modes for eye direction reading exists. The first one is based on brightness gradients with moderate accuracy, and the second one extracts higher-level features for high accuracy.
 
-@Anderson2016 argued that there may be different mechanisms for precise gaze triangulation and coarse judgement of direction. By using a contrast reversal manipulation they showed that the first depends on geometric cues, whereas the second depends on luminance andf motion cues. @Farroni2003 observed gaze cueing effect of 4 month old infants only in moving eyes, and only when the move is preceded by direct eye contact. The latter effect bears some resemblance to the calibration procedure used in eye tracking devices. Altogether, our experiment supports the hypothesis that multiple processing modes interact in human glance reading.
+A multiple receiver model has been proposed by @Anderson2016, who argue that there may be different mechanisms for precise gaze triangulation and coarse judgement of direction. By using a contrast reversal manipulation they showed that the first depends on geometric cues, whereas the second depends on luminance and motion cues. 
 
-@Loomis2008 found that eye direction detection is only reliable within 4° foveal eccentricity, which indicates that the EDD makes use of higher image processing features, such as edge and geometry detection. If the mechanism were instead based on brightness processing, we would not expect peripheral performance to degrade that much. Moreover, this mechanism alone would have rather limited utility in natural settings as it requires the observer to already attend to the senders eyes. In cooperative situations, especially in a group-in-action scenario, a secondary mechanism for peripheral change detection would strongly enhance the utility of the overall system.
+The multiple receiver model is also inline with the evolutionary process where a rudimentary cue receiver paves the way for the co-evolution of signals and more advanced receivers. Brightness gradient processing is not only a good candidate for such a proto-receiver, and there is no reason why this ability should vanish, especially when it still fulfills functions that the more advanced receiver cannot, such as long distance reading and peripheral change detection.
 
-Interestingly, some participants were not affected by the Quadbright image reduction and by tendency even performed better on a good level. This has two possible explanations: One is that Quadbright processing can be learned, and these individuals somehow have acquired this skill prior to the experiment. The second, more speculative explanation is that Quadbright processing is an innate capability that is just not present in every human.
+Interestingly, some participants were not affected by the Quadbright image reduction and by tendency even performed better on a good level. This has two possible explanations: One is that Quadbright processing can be learned, and these individuals somehow have acquired this skill prior to the experiment. Under the multiple receiver hypothesis one can also speculate that these individuals do not possess the foveal receiver, but learned to compensate almost fully using brightness processing.
 
-Finally, detection of spatial and temporal brightness gradients are universal functions in habitats where light exists, and have evolved at least as often as eyes have evolved in the animal kingdom. The fact that people can read Quadbright images has implications for the question of order of evolution. We posited the conundrum that the white sclera has a much higher chance of appearing through a one-point mutation than the eye direction detector (EDD), but it would only stay with an immediate benefit. Our observations support scenarios, where the white sclera started as a cue for an existing receiver mechanism based on brightness processing, providing the necessary baseline reciprocity for a specialized EDD to evolve.
+When @BARONCOHEN1995 postulated an EDD, he argued that gaze reading is not just a utilitarian function for shared attention, but a primary cue for Theory-of-Mind (TM), i.e. the ability to attribute mental states to others. In [@Cohen_autism_spectrum] he proposes a connection between autism spectrum disorders and a dysfunctional TM. If the lack of an EDD is part of this dysfunction, then we would expect diagnosed participant to show equal performance in the conditions of our experiment.
+
+## Limitations
+
+A limitation of the first study is that the YET Zero prototype fixes the camera close to eye, which does not match the conditions of a human observer. However, extreme data reduction of Quadbright input suggests that the algorithm will work for distant images as well. While the Quadbright device is not robust to adverse lighting conditions, this may not limit the conclusions of the study, because humans light adjustment capabilities of the human visual system (and that of many mammalian clades) are superb. A straight-forward technical approximation could be the addition of a few simple brightness sensors, and add these signals as control variables to the linear model. Finally, face detection and object tracking are required to find the eye region in a face. However, these are well-established techniques in computer vision, and the human visual system is extremely good at these tasks.
 
 <!--In this case, the white sclera must have appeared after the receiver mechanism evolved, as it would not have been useful otherwise. If Quadbright processing is a learned skill, then it could have evolved before the white sclera appeared, but this would require that the human visual system was already capable of reading glance directions from other sources, such as dark pupils in dark irises.-->
 
@@ -743,7 +750,7 @@ Speculating about how receiver mechanisms evolved, and how many there exist is f
 
 The dominant effect of the Quadbright manipulation is how differently it acts on individuals. The divide spans two magnitudes and must therefore have correlates in everyday performance. We would expect that performance in the Quadbright condition is correlated with the ability to read glances under poor conditions, for example with peripheral viewing or when the sender is wearing glasses.
 
-Studying how people read glances to establish shared attention also has impact in at least two modern fields of application. One problem with the emerge of automated cars is how they can effectively communicate with humans. For example, making eye contact is often observed in communication between drivers and street-crossing pedestrians. External human-machine interfaces (e-HMI) are displays have been tested for communication on the outside of cars, which communicate with pedestrians through text, icons and facial expressions. Understanding glance processing can be used to design efficient animations, which are perceived as glances.
+Studying how eye direction cues establish shared attention also has impact in at least two modern fields of application. One open problem in transport is how automated vehicles can effectively communicate attention and intentions with human traffic members. For example, making eye contact is often observed in communication between drivers and street-crossing pedestrians. External human-machine interfaces (e-HMI) have been tested for communication on the outside of cars, using text, icons and facial expressions. Understanding the role and processing modes of eye direction reading can be used to design more efficient signals.
 
 Another field of application is the design of artificial faces. In social robotics, robot faces are often designed to be expressive, and the role of glance reading in human-robot interaction is well established. However, designing more human-like eye regions for this purpose may result in an adverse effect known as the Uncanny Valley. Artificial faces that are too human-like, but not quite right, are perceived as creepy. The results of this study suggest that degraded eye regions can convey glance directions, which could facilitate the quality of interactiuon, without falling into the Uncanny Valley.
 
