--- a/yet_biomim.bib
+++ b/yet_biomim.bib
@@ -801,6 +801,20 @@
    year = {2016}
 }
 
+@article{Kruijt2011,
+   author = {Bastiaan Kruijt and Luuk Franssen and Liesbeth J. J. M. Prick and Johannes M. J. van Vliet and Thomas J. T. P. van den Berg},
+   doi = {10.1097/OPX.0b013e318212071e},
+   issn = {1040-5488},
+   issue = {5},
+   journal = {Optometry and Vision Science},
+   month = {5},
+   pages = {E585-E592},
+   title = {Ocular Straylight in Albinism},
+   volume = {88},
+   year = {2011}
+}
+
+
 @mastersthesis{Hoelter2025,
 month = {June},
 author = {Janis Hölter  and Martin Schmettow},
