--- a/yet_biomim.bib
+++ b/yet_biomim.bib
@@ -470,7 +470,7 @@
 }
 
 @Article{BARONCOHEN1995,
-  author    = {BARON-COHEN, S.},
+  author    = {Simon Baron-Cohen},
   journal   = {Joint attention : its origin and role in development},
   title     = {The eye detection detector (EDD) and the shared attention mechanism (SAM) : two cases for evolutionary psychology},
   year      = {1995},
@@ -478,6 +478,22 @@
   publisher = {Lawrence Erlbaum Associates},
   url       = {https://cir.nii.ac.jp/crid/1572261550899222144},
 }
+
+@article{BaronCohen2000,
+   author = {Simon Baron-Cohen},
+   doi = {10.1016/S0074-7750(00)80010-5},
+   isbn = {0123662230},
+   issn = {0074-7750},
+   journal = {International Review of Research in Mental Retardation},
+   month = {1},
+   pages = {169-184},
+   publisher = {Academic Press},
+   title = {Theory of mind and autism: A review},
+   volume = {23},
+   url = {https://www.sciencedirect.com/science/article/abs/pii/S0074775000800105},
+   year = {2000}
+}
+
 
 @Article{Zanoli2021,
   author    = {Zanoli, Anna and Gamba, Marco and Lemasson, Alban and Palagi, Elisabetta and Norscia, Ivan},
